--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-color: #3b3b98;
+	background-color: #252525;
 	color: #000;
 	font-family: "Muli", sans-serif;
 	display: flex;
@@ -26,7 +26,7 @@ h2 {
 
 .container {
 	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
-	background-color: #add8e6;
+	background-color: #808080;
 	padding: 20px;
 	width: 350px;
 	max-width: 100%;
@@ -67,7 +67,7 @@ h2 {
 
 .btn {
 	border: none;
-	background-color: #3b3b98;
+	background-color: #1a1a1a;
 	color: #fff;
 	font-size: 16px;
 	padding: 8px 12px;
